--- a/css/createRecipe.css
+++ b/css/createRecipe.css
@@ -1,3 +1,69 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "DM Sans", Arial, sans-serif;
+  line-height: 1.6;
+  background-color: white;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 2rem;
+  background-color: #8499b1;
+  color: white;
+  font-family: "Playfair Display", "serif";
+}
+.logo {
+  width: 40px;
+  height: 40px;
+  display: block;
+}
+.profile-icon {
+  width: 35px;
+  height: 35px;
+  display: block;
+}
+.nav-brand-link {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  text-decoration: none;
+  color: white;
+}
+.nav-brand {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Playfair Display", serif;
+}
+.nav-links {
+  display: flex;
+  gap: 6rem;
+}
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  font-family: "Playfair Display", serif;
+  font-size: 1.2rem;
+}
+.nav-links a.active {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+.nav-profile {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  font-family: "Playfair Display", serif;
+  font-size: 1.2rem;
+}
 form {
   display: flex;
   padding-bottom: 5px;
@@ -24,35 +90,18 @@ input {
 .Step {
   width: 80%;
 }
-div, section, header {
+div,
+section,
+header {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   padding-top: 50px;
 }
-h1{
+h1 {
   font-size: 2em;
 }
 #submitButton {
   margin-top: 20px;
-}
-nav {
-  text-align: center;
-}
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-nav ul li a {
-  text-decoration: none;
-}
-.navImage {
-  width: 50px;
-  height: 50px;
 }
