--- a/css/recipeDisplay.css
+++ b/css/recipeDisplay.css
@@ -1,22 +1,68 @@
-nav {
-  text-align: center;
-  padding-bottom: 50px;
-}
-nav ul {
-  list-style-type: none;
+* {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "DM Sans", Arial, sans-serif;
+  line-height: 1.6;
+  background-color: white;
+}
+.navbar {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;
+  padding: 1rem 2rem;
+  background-color: #8499b1;
+  color: white;
+  font-family: "Playfair Display", "serif";
 }
-nav ul li a {
+.logo {
+  width: 40px;
+  height: 40px;
+  display: block;
+}
+.profile-icon {
+  width: 35px;
+  height: 35px;
+  display: block;
+}
+.nav-brand-link {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
   text-decoration: none;
+  color: white;
 }
-.navImage {
-  width: 50px;
-  height: 50px;
+.nav-brand {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  font-family: "Playfair Display", serif;
+}
+.nav-links {
+  display: flex;
+  gap: 6rem;
+}
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  padding: 0.5rem 1rem;
+  font-family: "Playfair Display", serif;
+  font-size: 1.2rem;
+}
+.nav-links a.active {
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+}
+.nav-profile {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+  font-family: "Playfair Display", serif;
+  font-size: 1.2rem;
 }
 h1 {
   text-align: center;
