--- a/css/editRecipe.css
+++ b/css/editRecipe.css
@@ -118,3 +118,16 @@ h1 {
 #submitButton {
   margin-top: 20px;
 }
+button {
+  display: block;
+  width: 150px;
+  padding: 1rem;
+  background-color: #f3dfa2;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  margin-top: 2rem;
+  font-family: "DM Sans", Arial, sans-serif;
+}
