Edited no cart box color

--- a/css/cartStyles.css
+++ b/css/cartStyles.css
@@ -233,7 +233,7 @@ body {
 .no-carts {
     text-align: center;
     padding: 2rem;
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 4px;
     margin: 2rem 0;
 }
