--- a/css/recipeDisplay.css
+++ b/css/recipeDisplay.css
@@ -80,14 +80,19 @@ body {
   opacity: 0.8;
 }
 .recipe {
-  display: flex;
+  display: grid;
+  grid-template-columns: 2fr 2fr 3fr .5fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 
+    "span" "ul" "expansionDiv" "button-container";
   justify-content: space-between;
   align-items: center;
   background: white;
   padding: 10px;
   margin: 5px 0;
   border-radius: 5px;
-  border: 1px solid #ccc;
+  border: none;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 #recipeList {
   gap: 10px;
@@ -97,6 +102,7 @@ body {
 .button-container {
   display: flex;
   gap: 10px;
+  justify-content: right;
 }
 #createButton {
   display: inline;
@@ -134,7 +140,7 @@ main {
   margin: 2rem auto;
   padding: 0 1rem;
 }
-span {
+.recipeSpan {
   font-weight: bold;
 }
 ul {
@@ -145,6 +151,7 @@ ul {
   width: 0;
   border: 8px solid white;
   cursor: pointer;
+  position: absolute;
 }
 .collapsed {
   border-top-color: #000;
@@ -156,4 +163,9 @@ ul {
   overflow: hidden;
   transition: max-height 0.3s ease-out;
   max-height: 0;
+}
+.buttonSpan {
+  cursor: pointer;
+  font-weight: 500;
+  padding-right: 5px;
 }
