--- a/css/createRecipe.css
+++ b/css/createRecipe.css
@@ -79,7 +79,6 @@ body {
   opacity: 0.8;
 }
 form {
-  display: flex;
   padding-bottom: 5px;
   text-align: center;
   align-items: center;
@@ -87,9 +86,12 @@ form {
 label {
   padding-right: 5px;
   padding-left: 50px;
+  
 }
 input {
   height: 25px;
+  border: 0.5px solid gray;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 .Amount {
   width: 30px;
@@ -107,24 +109,42 @@ input {
   width: 10%;
 }
 section,
-main{
+main {
   display: flex;
   flex-direction: column;
   padding-top: 50px;
   width: 90%;
+}
+section {
+  padding-bottom: 50px;
 }
 h2 {
   font-size: 2em;
   margin-left: 50px;
   margin-bottom: 20px;
 }
+main h2 {
+  text-align: center;
+}
+main form {
+  justify-content: center;
+}
+.instructionDiv {
+  width: 90%;
+}
+.instructionForm {
+  display: flex;
+}
+.ingredientForm {
+  display: flex;
+}
 #submitButton {
   margin-top: 20px;
 }
-button {
+#submitButton {
   width: 150px;
   padding: 1rem;
-  background-color: #f3dfa2;
+  background-color: #f4c846;
   color: white;
   border: none;
   border-radius: 4px;
@@ -135,4 +155,30 @@ button {
   text-align: center;
   justify-content: center;
   margin-left: 50px;
+}
+#instructionButton {
+  width: 80px;
+  height: 27px;
+  background-color: #65ac4f;
+  color: white;
+  border: none;
+  border-radius: 1px;
+  cursor: pointer;
+  font-family: "DM Sans", Arial, sans-serif;
+  text-align: center;
+  justify-content: center;
+  margin-left: 10px;
+}
+#ingredientButton {
+  width: 110px;
+  height: 27px;
+  background-color: #65ac4f;
+  color: white;
+  border: none;
+  border-radius: 1px;
+  cursor: pointer;
+  font-family: "DM Sans", Arial, sans-serif;
+  text-align: center;
+  justify-content: center;
+  margin-left: 10px;
 }
