--- a/css/profile.css
+++ b/css/profile.css
@@ -120,7 +120,7 @@ body {
 /* Logout Button */
 .logout-btn {
   padding: 0.75rem 1.5rem;
-  background-color: #EC9192;
+  background-color: #D15E60;
   color: white;
   border: none;
   border-radius: 4px;
