--- a/css/index.css
+++ b/css/index.css
@@ -160,7 +160,7 @@ body {
 .login-btn {
     width: 100%;
     padding: 0.75rem;
-    background-color: #F3DFA2;
+    background-color: #F4C846;
     color: white;
     border: none;
     border-radius: 4px;
