Updated the nav links to work with Flask

--- a/flaskTestTool/templates/index.html
+++ b/flaskTestTool/templates/index.html
@@ -28,10 +28,10 @@
         </div>
 
         <div class="nav-links">
-            <a href="index.html" class="active">Home</a>
-            <a href="recipeDisplay.html">Recipes</a>
-            <a href="pantry.html">Pantry</a>
-            <a href="shoppingCart.html">Carts</a>
+            <a href="/index" class="active">Home</a>
+            <a href="/recipeDisplay">Recipes</a>
+            <a href="/pantry">Pantry</a>
+            <a href="/shoppingCart">Carts</a>
         </div>
 
         <div class="nav-profile">
