--- a/flaskTestTool/templates/editRecipe.html
+++ b/flaskTestTool/templates/editRecipe.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/editRecipe.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/editRecipe.css') }}">
 </head>
 <body>
     <nav></nav>
