--- a/flaskTestTool/templates/recipeDisplay.html
+++ b/flaskTestTool/templates/recipeDisplay.html
@@ -3,18 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Create Recipe</title>
+    <title>Recipes</title>
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400&family=Playfair+Display:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/createRecipe.css" />
+    <link rel="stylesheet" href="{{ url_for('static', filename= 'css/recipeDisplay.css') }}">
   </head>
   <body>
     <nav></nav>
     <main></main>
     <section></section>
-    <div class="instructionDiv"></div>
-    <script src="scripts/createRecipe.js"></script>
+    <script src="scripts/recipeDisplay.js"></script>
   </body>
 </html>
