refactored file setup, properly linked pages to display with Flask

--- a/flaskTestTool/templates/editRecipe.html
+++ b/flaskTestTool/templates/editRecipe.html
@@ -14,6 +14,6 @@
     <main></main>
     <section></section>
     <div class="instructionDiv"></div>
-    <script src="scripts/editRecipe.js"></script>
+    <script src="{{ url_for('static', filename='scripts/editRecipe.js')}}"></script>
 </body>
 </html>
