--- a/flaskTestTool/templates/shoppingCart.html
+++ b/flaskTestTool/templates/shoppingCart.html
@@ -44,7 +44,7 @@
 
               <!-- Profile -->
                <div class="nav-profile">
-                <a href="profile.html" class="profile-link">
+                <a href="profile" class="profile-link">
                 <span>Profile</span>
 
                 <!-- Profile Icon SVG -->
@@ -122,6 +122,6 @@
             </div>
         </div>
 
-           <script src="scripts/cartScript.js"></script>
+           <script src="{{ url_for('static', filename='scripts/cartScript.js')}}"></script>
     </body>
 </html>
