--- a/flaskTestTool/templates/createRecipe.html
+++ b/flaskTestTool/templates/createRecipe.html
@@ -15,6 +15,6 @@
     <main></main>
     <section></section>
     <div class="instructionDiv"></div>
-    <script src="scripts/createRecipe.js"></script>
+    <script src="{{ url_for('static', filename='scripts/createRecipe.js')}}"></script>
   </body>
 </html>
