--- a/flaskTestTool/templates/index.html
+++ b/flaskTestTool/templates/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="nav-profile">
-            <a href="profile.html" class="profile-link">
+            <a href="profile" class="profile-link">
                 <span>Profile</span>
                 <svg class="profile-icon" width="30" height="30" viewBox="0 0 343 333" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M165.926 164.974C197.498 164.974 223.093 140.126 223.093 109.474C223.093 78.8219 197.498 53.9737 165.926 53.9737C134.354 53.9737 108.759 78.8219 108.759 109.474C108.759 140.126 134.354 164.974 165.926 164.974Z" stroke="#F3DFA2" stroke-width="12.5417" stroke-linecap="round" stroke-linejoin="round"/>
@@ -74,6 +74,6 @@
             </form>
         </div>
       </div>
-    <script src="scripts/index.js"></script>
+    <script src="{{ url_for('static', filename='scripts/index.js')}}"></script>
 </body>
 </html>
