--- a/flaskTestTool/templates/profile.html
+++ b/flaskTestTool/templates/profile.html
@@ -71,6 +71,6 @@
             </div>
           </main>
 
-          <script src="scripts/profile.js"></script>
+          <script src="{{ url_for('static', filename='scripts/profile.js')}}"></script>
     </body>
 </html>
