--- a/flaskTestTool/static/css/pantryStyles.css
+++ b/flaskTestTool/static/css/pantryStyles.css
@@ -23,6 +23,10 @@ body {
 
 /* Navigation Bar Styles */
 .navbar {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -99,11 +103,11 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #F3DFA2;
+    background-color: white;
 }
 .container {
     max-width: 500px;
-    margin: 0 auto;
+    margin: 80px auto 0 auto;
     background-color: #F5F0F6;
     padding: 20px;
     border-radius: 8px;
