Updated active indication tab for pantry page

--- a/flaskTestTool/templates/pantry.html
+++ b/flaskTestTool/templates/pantry.html
@@ -78,9 +78,9 @@
 
       <!-- Nav Links -->
       <div class="nav-links">
-        <a href="/index" class="active">Home</a>
+        <a href="/index">Home</a>
         <a href="/recipeDisplay">Recipes</a>
-        <a href="/pantry">Pantry</a>
+        <a href="/pantry" class="active">Pantry</a>
         <a href="/shoppingCart">Carts</a>
       </div>
 
