--- a/flaskTestTool/templates/profile.html
+++ b/flaskTestTool/templates/profile.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="nav-links">
-                <a href="/index" class="active">Home</a>
+                <a href="/index">Home</a>
                 <a href="/recipeDisplay">Recipes</a>
                 <a href="/pantry">Pantry</a>
                 <a href="/shoppingCart">Carts</a>
