Edits to html for shopping cart page

--- a/flaskTestTool/templates/shoppingCart.html
+++ b/flaskTestTool/templates/shoppingCart.html
@@ -36,10 +36,10 @@
 
              <!-- Nav Links -->
               <div class="nav-links">
-                <a href="/index" class="active">Home</a>
+                <a href="/index">Home</a>
                 <a href="/recipeDisplay">Recipes</a>
                 <a href="/pantry">Pantry</a>
-                <a href="/shoppingCart">Carts</a>
+                <a href="/shoppingCart" class="active">Carts</a>
               </div>
 
               <!-- Profile -->
