--- a/flaskTestTool/templates/index.html
+++ b/flaskTestTool/templates/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <p class="signup-prompt">
-                    Don't have an account? <a href="#" class="signup-link">Sign Up</a>
+                    Don't have an account? <a href="/signUp" class="signup-link">Sign Up</a>
                 </p>
             </form>
         </div>
