--- a/flaskTestTool/templates/profile.html
+++ b/flaskTestTool/templates/profile.html
@@ -29,14 +29,14 @@
             </div>
 
             <div class="nav-links">
-                <a href="/index">Home</a>
+                <a href="/home">Home</a>
                 <a href="/recipeDisplay">Recipes</a>
                 <a href="/pantry">Pantry</a>
                 <a href="/shoppingCart">Carts</a>
             </div>
 
             <div class="nav-profile">
-                <a href="profile" class="profile-link active">
+                <a href="/profile" class="profile-link active">
                     <span>Profile</span>
                     <svg class="profile-icon" width="30" height="30" viewBox="0 0 343 333" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M165.926 164.974C197.498 164.974 223.093 140.126 223.093 109.474C223.093 78.8219 197.498 53.9737 165.926 53.9737C134.354 53.9737 108.759 78.8219 108.759 109.474C108.759 140.126 134.354 164.974 165.926 164.974Z" stroke="#F3DFA2" stroke-width="12.5417" stroke-linecap="round" stroke-linejoin="round"/>
