--- a/flaskTestTool/templates/shoppingCart.html
+++ b/flaskTestTool/templates/shoppingCart.html
@@ -36,7 +36,7 @@
 
              <!-- Nav Links -->
               <div class="nav-links">
-                <a href="/index">Home</a>
+                <a href="/home">Home</a>
                 <a href="/recipeDisplay">Recipes</a>
                 <a href="/pantry">Pantry</a>
                 <a href="/shoppingCart" class="active">Carts</a>
