changed recipe link to recipeDisplay

--- a/flaskTestTool/templates/home.html
+++ b/flaskTestTool/templates/home.html
@@ -47,7 +47,7 @@
                     </div>
                     <h2>Recipe Management</h2>
                     <p>Create, save, and manage your favorite recipes. Add detailed ingredients and step-by-step instructions to make cooking easier than ever.</p>
-                    <a href="/createRecipe" class="feature-button">View Recipes</a>
+                    <a href="/recipeDisplay" class="feature-button">View Recipes</a>
                 </div>
 
                 <div class="feature-card">
