--- a/flaskTestTool/templates/recipeDisplay.html
+++ b/flaskTestTool/templates/recipeDisplay.html
@@ -14,6 +14,6 @@
     <nav></nav>
     <main></main>
     <section></section>
-    <script src="{{ url_for('static', filename='scripts/recipeDIsplay.js')}}"></script>
+    <script src="{{ url_for('static', filename='scripts/recipeDisplay.js')}}"></script>
   </body>
 </html>
