--- a/flaskTestTool/static/css/recipeDisplay.css
+++ b/flaskTestTool/static/css/recipeDisplay.css
@@ -103,6 +103,9 @@ body {
   gap: 10px;
   justify-content: right;
 }
+button {
+  font-family: "DM Sans", Arial, sans-serif;
+}
 #createButton {
   display: inline;
   text-align: center;
@@ -115,11 +118,12 @@ body {
   border-radius: 4px;
   font-size: 1.1rem;
   cursor: pointer;
-  font-family: "DM Sans", Arial, sans-serif;
   margin: 2rem 0 10px 10px;
 }
 .editButton,
-.deleteButton {
+.deleteButton,
+.scaleButton,
+.convertButton {
   background-color: #65ac4f;
   border: none;
   color: white;
@@ -130,11 +134,29 @@ body {
 .deleteButton {
   background-color: #d15e60;
 }
+.scaleButton {
+  background-color: rgb(4, 90, 176);
+}
+.convertButton {
+  display: inline;
+  text-align: center;
+  justify-content: center;
+  width: 165px;
+  background-color: gray;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+}
 section {
   display: flex;
   justify-content: center;
 }
 main {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   max-width: 1200px;
   margin: 2rem auto;
   padding: 0 1rem;
@@ -146,17 +168,18 @@ ul {
   list-style-type: none;
 }
 .expansionButton {
-  height: 0;
-  width: 0;
-  border: 8px solid white;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
   cursor: pointer;
   position: absolute;
+  background-color: transparent;
 }
-.collapsed {
-  border-top-color: #000;
-}
-.open {
-  border-bottom-color: #000;
+.open .expansionButton{
+  transform: rotate(180deg);
 }
 .expansionContent {
   overflow: hidden;
@@ -182,4 +205,66 @@ ul {
 .recipe .allergen:empty {
   background-color: transparent;
   color: transparent;
+}
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid black;
+  border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 500px;
+  max-width: 80%;
+}
+.modalHeader {
+  display: flex;
+  padding: 10px 15px;
+  justify-content: space-between;
+  align-items: center;
+}
+.closeModalButton {
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border: none;
+  outline: none;
+  background: none;
+}
+.modalBody {
+  padding: 10px 15px;
+}
+.ingredientModalHeader {
+  padding-top: 10px;
+}
+.instructionModalHeader {
+  padding-top: 10px;
+}
+.scaleLabel {
+  padding-right: 5px;
+}
+.applyButton {
+  margin-left: 5px;
+  border: none;
+  color: white;
+  padding: 5px 10px;
+  cursor: pointer;
+  border-radius: 3px;
+  background-color: rgb(4, 90, 176);
+}
+.modalInput {
+  height: 25px;
+  border: 0.5px solid gray;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  padding: 5px;
+  width: 60px;
+}
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
