size input can be fractional, scaleing works with fractions, scale modal can scroll

--- a/flaskTestTool/static/css/recipeDisplay.css
+++ b/flaskTestTool/static/css/recipeDisplay.css
@@ -239,6 +239,8 @@ ul {
 }
 .modalBody {
   padding: 10px 15px;
+  max-height: 70vh;
+  overflow-y: auto;
 }
 .ingredientModalHeader {
   padding-top: 10px;
