--- a/flaskTestTool/static/css/pantryStyles.css
+++ b/flaskTestTool/static/css/pantryStyles.css
@@ -106,12 +106,17 @@ body {
     background-color: white;
 }
 .container {
-    max-width: 500px;
+    max-width: 1000px;
     margin: 80px auto 0 auto;
     background-color: #F5F0F6;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.inputPantry {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 h1 {
     text-align: center;
@@ -132,14 +137,19 @@ select, input[type="text"] {
     font-size: 16px;
 }
 .btn {
-    background-color: #EC9192;
-    color: #8499B1;
+    width: 150px;
+    padding: 1rem;
+    background-color: #f4c846;
+    color: white;
     border: none;
-    padding: 10px 15px;
-    font-size: 16px;
     border-radius: 4px;
+    font-size: 1.1rem;
     cursor: pointer;
-    width: 100%;
+    margin-top: 2rem;
+    font-family: "DM Sans", Arial, sans-serif;
+    text-align: center;
+    justify-content: center;
+    margin-left: 50px;
 }
 .btn:hover {
     background-color: #EC9192;
@@ -153,3 +163,43 @@ select, input[type="text"] {
     min-height: 50px;
     color: #333;
 }
+.icon-area {
+    height: 300px;
+    overflow-y: auto;
+    background-color: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    padding: 10px;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+  }
+
+  .icon-card {
+    width: 120px;
+    height: 140px;
+    margin: 10px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    text-align: center;
+    padding: 8px;
+    box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
+    box-sizing: border-box;
+  }
+
+  .icon-img {
+    width: 48px;
+    height: 48px;
+    margin-bottom: 8px;
+  }
+
+  .info {
+    font-size: 12px;
+    line-height: 1.3;
+  }
+  
+  .top-div, .bottom-div {
+    padding: 20px;
+    background-color: #f0f0f0;
+    text-align: center;
+  }
